--- a/demo/base/_grid.scss
+++ b/demo/base/_grid.scss
@@ -1,6 +1,6 @@
 $my-grid: (
     driver: flex,
-    gutter: 30px,
+    gutter: 2%,
     collapse: false
 );
 
