--- a/demo/components/_grid-container.scss
+++ b/demo/components/_grid-container.scss
@@ -1,6 +1,7 @@
 .grid-container {
     @include grid-container;
-    margin: 1rem 0;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     &__title {
         font-size: 2rem;
         font-weight: 100;
